--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-ROOT_DIRECTORY=/path/to/your/root/directory
 PORT=3000
+
+DATABASE_URL="postgresql://postgres:testpass123@localhost:6500/mydb?schema=public"
