--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "start": "npx tsc && node dist/index.js",
-    "dev": "nodemon - exec 'ts-node' src/index.ts"
+    "dev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/index.js\""
   },
   "author": "",
   "license": "ISC",
@@ -24,9 +24,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.1",
-    "nodemon": "^3.1.7",
     "prisma": "^6.0.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "tsc-watch": "^6.2.1"
   }
 }
