add query param to get files by directory; allow empty file directory; allow getting directories and files from root directory

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.1",
     "prisma": "^6.0.0",
+    "ts-node": "^10.9.2",
     "tsc-watch": "^6.2.1"
   }
 }
