--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ PORT=3000
 
 DATABASE_URL="postgresql://postgres:testpass123@localhost:6500/mydb?schema=public"
 JWT_SECRET="poop"
+
+FILE_STORAGE_PATH="./storage"
