add cors origin env variable, change defaylt port to 3001

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-PORT=3000
+PORT=3001
+CORS_ORIGIN="http://localhost:3000"
 
 DATABASE_URL="postgresql://postgres:testpass123@localhost:6500/mydb?schema=public"
 JWT_SECRET="poop"
