env & cookie fixes

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 PORT=3001
-CORS_ORIGIN="http://localhost:3000"
+FRONTEND_DOMAIN="http://localhost:3000"
+NODE_ENV="dev"
 
 DATABASE_URL="postgresql://postgres:testpass123@localhost:6500/mydb?schema=public"
 JWT_SECRET="poop"
