--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ FRONTEND_DOMAIN="http://localhost:3000"
 NODE_ENV="dev"
 
 DATABASE_URL="postgresql://postgres:testpass123@localhost:6500/mydb?schema=public"
-JWT_SECRET="poop"
+ACCESS_TOKEN_SECRET="poop"
+REFRESH_TOKEN_SECRET="poop2"
 
 FILE_STORAGE_PATH="./storage"
